# snippy-cli

./: .gitignore  README.md  install.sh  pyproject.toml
snippy/: __main__.py  app.py
snippy/Snippets/: auth.js  db.js  jsbp.js  jwt.js  usermodel.js  userref.js
